소개 페이지 추가 및 검색 메타태그 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="naver-site-verification" content="6ecb7fca382163949ff38d5372f40cdd8fbb14a4" />
+    <meta name="google-site-verification" content="ow_8yljPQbeSD9KOVNKhe--S4mG0K8Iz0ceyyH-HlHI" />
     <title>Welcome to the Gyemini era</title>
   </head>
   <body>
