--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,8 @@
     <meta name="naver-site-verification" content="6ecb7fca382163949ff38d5372f40cdd8fbb14a4" />
     <meta name="google-site-verification" content="ow_8yljPQbeSD9KOVNKhe--S4mG0K8Iz0ceyyH-HlHI" />
     
+    <meta name="google-adsense-account" content="ca-pub-8246837463948296">
+    
     <title>계미나이 - GPT보다 똑똑한 계산기 | 이자계산기, D-day계산기, 단위변환기</title>
   </head>
   <body>
